--- a/adapters-2.0/pom.xml
+++ b/adapters-2.0/pom.xml
@@ -40,7 +40,7 @@
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
-            <artifactId>custom-transformer_${scala.binary.version}</artifactId>
+            <artifactId>custom-transformer-2.0_${scala.binary.version}</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
