--- a/adapters-2.0/pom.xml
+++ b/adapters-2.0/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.flipkart.fdp.ml</groupId>
         <artifactId>spark-transformers</artifactId>
-        <version>0.3.1</version>
+        <version>0.3.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -16,7 +16,7 @@
     </properties>
 
     <artifactId>adapters-2.0_${scala.binary.version}</artifactId>
-    <packaging>jar</packaging>
+    <!--<packaging>jar</packaging>-->
     <version>${project.parent.version}</version>
     <name>Spark 2.0 Model Adapters</name>
 
