--- a/models-info/pom.xml
+++ b/models-info/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.flipkart.fdp.ml</groupId>
         <artifactId>spark-transformers</artifactId>
-        <version>0.3.1</version>
+        <version>0.3.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
